bin/tests/snapshots/unquoted_uri__33baa84c37bca40983a14f7acf371ef0_fix.snap
---
source: bin/tests/unquoted_uri.rs
---
github:nerdypepper/statix
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-github:nerdypepper/statix
+"github:nerdypepper/statix"
