bin/tests/snapshots/unquoted_uri__33baa84c37bca40983a14f7acf371ef0_lint.snap
---
source: bin/tests/unquoted_uri.rs
---
github:nerdypepper/statix
---
[unquoted_uri] Warning: Found unquoted URI expression
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ github:nerdypepper/statix
   │ ────────────┬────────────  
   │             ╰────────────── Consider quoting this URI expression
───╯
