bin/tests/snapshots/unquoted_uri__33baa84c37bca40983a14f7acf371ef0_lint_errfmt.snap
---
source: bin/tests/unquoted_uri.rs
---
github:nerdypepper/statix
---
<temp_file_path>>1:1:W:12:[unquoted_uri] Consider quoting this URI expression
