bin/tests/snapshots/unquoted_uri__33baa84c37bca40983a14f7acf371ef0_lint_json.snap
---
source: bin/tests/unquoted_uri.rs
---
github:nerdypepper/statix
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "unquoted_uri",
      "note": "Found unquoted URI expression",
      "code": 12,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 26
            }
          },
          "message": "Consider quoting this URI expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 26
              }
            },
            "fix": "\"github:nerdypepper/statix\""
          },
          "fixable": true
        }
      ]
    }
  ]
}
