bin/tests/snapshots/unquoted_uri__fix_33baa84c37bca40983a14f7acf371ef056c6037384f9ceb0389472c2c4ce4327.snap
---
source: bin/tests/unquoted_uri.rs
expression: snapshot
---
expression:
github:nerdypepper/statix
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-github:nerdypepper/statix
+"github:nerdypepper/statix"
