bin/tests/snapshots/unquoted_uri__lint_05389a7bb7c4657cb1d7a6a71024f0096085e8c937126fc60a29300ea99c1c5b.snap
---
source: bin/tests/unquoted_uri.rs
---
github:nerdypepper/statix

---
[W12] Warning: Found unquoted URI expression
   ╭─[<temp_file_path>:1:1]
   │
 1 │ github:nerdypepper/statix
   · ────────────┬────────────  
   ·             ╰────────────── Consider quoting this URI expression
───╯
