bin/tests/snapshots/unquoted_uri__lint_33baa84c37bca40983a14f7acf371ef056c6037384f9ceb0389472c2c4ce4327.snap
---
source: bin/tests/unquoted_uri.rs
---
expression:
github:nerdypepper/statix
---
[W12] Warning: Found unquoted URI expression
   ╭─[<temp_file_path>:1:1]
   │
 1 │ github:nerdypepper/statix
   · ────────────┬────────────  
   ·             ╰────────────── Consider quoting this URI expression
───╯
